--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <div id="map" style="position: relative;"></div>
 <h3>
-		Hover/Click on state to see the death rate per 100k daily from covid in that state.</h3>
+		Hover/Click on state to see Deaths per 100 Cases in that state..</h3>
 <h4>Source:
 		<a href="https://www.worldometers.info/coronavirus/">
 			WorldOMeters</a>
@@ -51,7 +51,7 @@
 			'd|0x4|5OCPxOEQL6L4Iyzn8|application|json|readyState|log|Datamap|element|getEle' +
 			'mentById|map|scope|document|last|console|0x0|responseText|parse|SUCCEEDED|stat' +
 			'us|items|dataset|responsive|GET|usa|br|fills|name|setTimeout|POST|addEventList' +
-			'ener|window|join|numberOfThings|x20|Deaths Per 100k|0x3e8|properties|data|x22|x22hoverinf' +
+			'ener|window|join|numberOfThings|x20|Deaths Per 100 Cases|0x3e8|properties|data|x22|x22hoverinf' +
 			'o|x20class|return|popupTemplate|8C4242|highlightFillColor|8C8C8C|borderColor|g' +
 			'eographyConfig|XMLHttpRequest').split('|'), 0, {}))
 </script>
